implementacion del registro de nuevos usuario con la interfaz cambio del manejo de la base a SQL Server